Contact section and more alignment issues

--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
-}
 /* set width to be the entire page */
 .w100 {
   width: 100%;
 }
-
 /* set header as flex, so it will apply to h1 and nav */
 /* set positioing, background and color */
 /* set z-index to force header to display at top */
@@ -13,12 +11,12 @@ header {
   justify-content: flex-start;
   align-items: center;
   background: rgb(37, 37, 37);
-  z-index: 1000;
+  flex: 0, 0, 100%;
+    /* z-index: 1000; */
 }
 
 /* set colors, padding and margins */
 header h1 {
-  /* border: 1px solid red; */
   background-color: #a3f1ee;
   color: #36383a;
   font-size: 2.5em;
@@ -38,7 +36,6 @@ header h1 {
 
 /* set margin, font size */
 header nav {
-  /* border: 2px solid white; */
   margin-right: 85px;
   font-size: 1.3em;
 }
@@ -46,21 +43,19 @@ header nav {
 /* set nav ul as flex, so it will apply to li */
 /* align items */
 nav ul {
-/* border: 5px solid blue; */
   display: flex;
   flex-wrap: wrap;
+  flex: 1, 1, 50px;
 }
 
 /* set margin and border  */
 nav li {
-  /* border: 2px solid green; */
   margin: 5px;
   border-bottom: thick solid #a3f1ee;
 }
 
 /* display block and set colour, padding */
 nav a {
-  /* border: 2px solid yellow; */
   display: block;
   color: #a3f1ee;
   text-align: left;
@@ -81,7 +76,6 @@ nav a:hover {
 /* set class as flex, so it will apply to h2 */
 /* set background and positioning */
 .banner {
-  /* border: 2px solid green; */
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
@@ -90,8 +84,8 @@ nav a:hover {
   height: 150px;
 } 
 .banner h2 {
-  /* border: 2px solid red; */
-  height: 25%;
+  height: 35px;
+  width: max-content;
   background-color: #a3f1ee;
   color: #36383a;
   font-size: 1.5em;
@@ -101,27 +95,31 @@ nav a:hover {
   margin-bottom: 40px;
 }
 
-/* set class as flex, so it will apply to div and articles*/
-.section {
-  border: 2px solid red;
+.content {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  /* font-size: 1em; */
-  margin-top: 30px;
-  /* padding-left: 20px; */
-  color: #244668;
-  /* height:min-content */
+  align-items: flex-start;
+}
+/* set class as flex, so it will apply to div and articles*/
+.section {
+  margin-right: 85px;
+  margin-top: 20px;
+  padding-left: 120px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
  }
 
 /* position wording to the right of avatar */
 /* set as flex, so it will apply to img and h2 */
-.section-L {
-  /* border: 12px solid red; */
-  width: 20%;
-  font-size: 2em;
+.section h2 {
+  width: 220px;
+  font-size: 2.5em;
   text-align: right;
-  margin-right: 15px;
+  margin: 30px;
+  padding: 5px;
+  border-right: thick solid #244668;
 }
 
 h2 span::before {
@@ -129,63 +127,37 @@ h2 span::before {
   white-space: pre;
 }
 
-.section-R {
-  border: 5px dotted black;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  border-left: thick solid #244668;
-  /* margin-left: 50px; */
-  /* margin-bottom: 50px; */
-  width: 950px;
-  /* margin-right: 20px;
-  margin-top: 50px; */
-  /* justify-self: flex-end; */
-  /* height: 100%; */
-  /* height: min-content; */
+.section div {
+  width: 900px;
 }
 
 p {
-  /* border: 3px solid brown; */
-  /* padding-left:2em; */
   line-height: 1.2;
   margin-top: 5px;
-  margin-left: 50px;
   height: min-content;
-  /* padding-top: 2em; */
   margin-bottom: 10px;
-  /* align-content: center; */
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  margin-right: 85px;
 }
 
-.section-R article {
-  /* border: 50px solid silver; */
+article {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: flex-end;
   border: 4px solid #86b9e9;
   margin: 5px;
-  /* padding: 100px; */
-  /* margin: 50px; */
-  /* width: 100%; */
-  /* height: 10%; */
-  /* margin-top: 20px;
-  margin-right: 20px;
-  margin-left: 50px; */
 }
 
 h3 {
-  /* align-items: flex-start; */
-  /* height: min-content; */
   background-color: #a3f1ee;
-  /* color: #36383a; */
-  /* font-size: 1.2em;
-  font-weight: bold; */
-  padding: 5px 10px;
-  /* margin-bottom: 1px; */
-  /* align-self: flex-end; */
-  
+  margin-bottom: 10px;
 }
+
 h3 span {
   font-weight: lighter;
   font-size: smaller;
@@ -197,33 +169,18 @@ h3 span::before {
 }
 
 h3:hover {
-
+  background-color: purple;
 }
 
-#work {
-  /* border: 2px solid orange; */
-}
-
-#major {
+.major {
   background-image: url("./assets/images/surf.bmp");
+  width: 100%;
   height: 400px;
-  width: 865px;
-  /* flex-basis: fill; */
-  /* width: 100%; */
-  /* padding-left: 150px; */
-  /* margin-left: 30px; */
-  /* align-self: flex-start; */
-  /* height: 100%; */
 }
 
 .minor {
-    /* background-image: url("./assets/images/surf.bmp"); */
-  width: 415px;
-  height: 150px;
-  /* height: 100%; */
-  /* height: 100%; */
-  align-self: center;
-  
+  width: 48%;
+  height: 120px;
 }
 
 #minor1 {
@@ -239,87 +196,37 @@ h3:hover {
 }
 
 #minor4 {
-  background-image: url("./assets/images/runbuddy.PNG");
+ background-image: url("./assets/images/runbuddy.PNG");
+}
+/* set margin, font size */
+
+#contact nav {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-size: 1.3em;
+  width: 70%
 }
 
-/* .h50 {
-  height: 50%;
+/* set nav ul as flex, so it will apply to li */
+/* align items */
+#contact nav ul { 
+  /* border: 6px solid red; */
+  display: flex; */
+  flex-wrap: wrap; */
+  justify-content: right;
+  align-items: center;
+}    
+/* set margin and border  */
+#contact nav li {
+  margin: 30px;
+  border-bottom: thick solid #36383a;
 }
 
-.h25 {
-  height: 25%;
+/* display block and set colour, padding */
+#contact nav a {
+  display: block;
+  color: #a3f1ee;
+  text-align: left;
+  padding: 5px 5px;
 }
-.w50 {
-  width: 50%'' */
-} 
-  /* 
-  What is the flex property a shorthand property for?
-  It is a shorthand property for the flex-grow, flex-shrink, and flex-basis properties 
-  What is it doing here?
-  We are making the product card not growable, not shrinkable, and with an initial length of 400px 
-  */
-  /* .box {
-    width: 100%;
-    border-style:none
-    border-width: 1px;
-    border-radius: 10px;
-    padding: 10px;
-    flex: 0 0 400px;
-  } */
-/* 
-  What does the flex-direction property define?
-  It defines in which direction the container wants to stack the flex items
-  What is it doing here? 
-  We are telling the main body and navbar to stack vertically in a column
-  */
-  /* @media screen and (max-width: 768px) {
-    main,
-    nav {
-      flex-direction: column;
-    } */
- /*   
-  @media (max-width: 450px) {
-    body {
-        width: 100%;
-        margin: 0;
-        padding: 1em 0 2m;
-    }
-    header {
-        padding 2% 5%;
-    } */
-
-      /* width: 250px; */
-  /* margin-left: 010px; */
-  /* margin-right: 20px; */
-  /* height: 100%; */
-  /* width: 25% */
-}
-/* 
-.content h2 {
-  border: 6px solid green;
-  text-align: right;
-  width: 
-  padding-left: 25px; */
-}
-
-
-    
-/* display: flex; */
-/* flex-wrap: wrap;
-justify-content: right; */
-
-/* #about img {
-  border: 2px solid rgb(255, 0, 242);
-  width: 100%; */
-
-/* }
-.sectionL h2 {
-  text-align: right;
-  border: 2px solid rgb(255, 0, 242);
-} */
-
-/* .sectionL h2 span {
-  border: 12px solid rgb(255, 0, 242);
-} */
-
-/* to access span within about h2 */
